--- a/catalog_service/package.json
+++ b/catalog_service/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "express": "^5.2.1"
   },
   "devDependencies": {
